--- a/login.html
+++ b/login.html
@@ -10,6 +10,10 @@
 <body>
     <div class="main">
         <img class="namelogo" src="insta name.png" alt=""> 
+        <form action="#">
+            <input type="text" placeholder="Phone number , username or email">
+            <input type="password" name="" id="" placeholder="password">
+        </form>
     </div>
 </body>
 </html>
