--- a/login.html
+++ b/login.html
@@ -9,11 +9,24 @@
 </head>
 <body>
     <div class="main">
-        <img class="namelogo" src="insta name.png" alt=""> 
-        <form action="#">
-            <input type="text" placeholder="Phone number , username or email">
-            <input type="password" name="" id="" placeholder="password">
+         <div class="img">
+        <img class="namelogo" src="Screenshot 2025-03-11 093801.png" alt=""> 
+    </div>
+        <form action="#" class="form">
+            <input type="text" placeholder="Phone number, username, or email">
+            <input type="password" name="" id="" placeholder="Password">
+            <button class="button">Log in</button>
         </form>
+        <div class="or">
+             <span>————————</span> <p>OR</p> <span>————————</span>
+        </div>
+
+        <div class="facebook">
+            <p><img src="facbook logo.png" alt=""><a class="fb" href="">Log in with Facebook</a></p>
+        </div>
+         
+        <div class="forgotpswrd"> <p><a class="forgotpassword" href="#">Forgot password?</a></p>
+        </div>  
     </div>
 </body>
 </html>
