--- a/login.html
+++ b/login.html
@@ -27,6 +27,22 @@
          
         <div class="forgotpswrd"> <p><a class="forgotpassword" href="#">Forgot password?</a></p>
         </div>  
+
+        <div class="box2">
+            <!-- hello -->
+             <div class="box2-contain">
+
+                 <p class="signup">Don't have an account? <a  href="#"> Sign up</a></p>
+                </div>
+         </div>
+
+         <div class="box3">
+            <p>Get the app.</p>
+         </div>
+         <div class="box4">
+            <a c href="#"><img class="googleplay" src="google play.png" alt=""></a>
+            <a href="#"><img class="microsoft" src="microsoft.png" alt=""></a>
+         </div>
     </div>
 </body>
 </html>
