sing up page create

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="facebook">
-            <p><img src="facbook logo.png" alt=""><a class="fb" href="">Log in with Facebook</a></p>
+            <p><img src="facbook logo.png" alt=""><a target="_blank" class="fb" href="https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Foidc%2F%3Fapp_id%3D124024574287414%26redirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignupviafb%252F%26response_type%3Dcode%26scope%3Dopenid%2Bemail%2Bprofile%2Blinking%26state%3DATl6PiUsjZfIgLPkiexoBry_tNNZ3XCVYY_6zIOzIur4XMve6MqaFoUXUSK3vBSncuseu3j2MtV7Jmn74SpMeyMhX-T60y8GDtiJcKLmtb-XEbUfZO7nUZk3fUSLmbvKImKjlTOu3a5djZ4LXToxozjTLK8Nun-UlVkWbaXP1TjHSiQXHaxhVZRTHltzwOfVISmeLX09Vhm_3w61xNpZiJ5X72lOnIHccVGSxddHGrgnD8-IHsu6brBMN8fMl49ZI6lh">Log in with Facebook</a></p>
         </div>
          
         <div class="forgotpswrd"> <p><a class="forgotpassword" href="#">Forgot password?</a></p>
@@ -32,7 +32,7 @@
             <!-- hello -->
              <div class="box2-contain">
 
-                 <p class="signup">Don't have an account? <a  href="#"> Sign up</a></p>
+                 <p class="signup">Don't have an account? <a  href="signup.html"> Sign up</a></p>
                 </div>
          </div>
 
@@ -40,7 +40,7 @@
             <p>Get the app.</p>
          </div>
          <div class="box4">
-            <a c href="#"><img class="googleplay" src="google play.png" alt=""></a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D2087E489-A57D-4326-BB09-A67229BC6B2F%26utm_campaign%3DloginPage%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img class="googleplay" src="google play.png" alt=""></a>
             <a href="#"><img class="microsoft" src="microsoft.png" alt=""></a>
          </div>
     </div>
