--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,21 @@
         <div class="or">
             <span>————————</span> <p>OR</p> <span>————————</span>
        </div>
+       <form class="form" action="">
+        <input type="text" name="" id="email" placeholder="Mobile number or email address">
+        <input type="password" name="" id="password" placeholder="Password">
+        <input type="text" name="" id="fullname" placeholder=" Full Name">
+        <input type="text" name="" id="Username" placeholder="Username">
+       </form>
+       <div class="text">
+        <p>People who use our service may have uploaded <br> your contact information to Instagram. <a href="">Learn more</a>  </p>
+        
+        <p id="p2">By signing up, you agree to our Terms, Privacy  <br> Policy and Cookies Policy.</p>
+       </div>
+       <div class="btnsignup">
+
+           <button class="button">Sign Up</button>
+        </div>
     </div>
 </body>
 </html>
