complete both pages

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
          </div>
          <div class="box4">
             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D2087E489-A57D-4326-BB09-A67229BC6B2F%26utm_campaign%3DloginPage%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img class="googleplay" src="google play.png" alt=""></a>
-            <a href="#"><img class="microsoft" src="microsoft.png" alt=""></a>
+            <a href="https://apps.microsoft.com/detail/9NBLGGH5L9XT?hl=en&gl=IN&ocid=pdpshare"><img class="microsoft" src="microsoft.png" alt=""></a>
          </div>
     </div>
 </body>
