--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="fbbtn">
-            <button type="submit" ><img src="fblogosignup.png" alt=""> <span>Log in with Facebook</span></button>
+           <a href="https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Foidc%2F%3Fapp_id%3D124024574287414%26redirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignupviafb%252F%26response_type%3Dcode%26scope%3Dopenid%2Bemail%2Bprofile%2Blinking%26state%3DATkW4YjJHDeXCMhd2dNORUg9jGOhfNslGAevbLsCahfIOYW74uPja4XxsUvyhZWWiLXtgbZmgIEhtwUQz5-wYBTSXLaVOO3hC_7ijRyR2O7QB96vwhspq4nfp-Xo1ymDqUFtgvBCY9CpG19K3EcOtHH8cxuD_dQTQ191F5mBVMI-5c3YHiDjb8jVnwO3QSGEudxyO2lngX6og9KyQmJvxP6FxcKc1Unf1mxqxkX8ncmwrt19Gw"> <button type="submit" ><img src="fblogosignup.png" alt=""> <span>Log in with Facebook</span></button></a>
         </div>
         <div class="or">
             <span>————————</span> <p>OR</p> <span>————————</span>
@@ -29,14 +29,27 @@
         <input type="text" name="" id="Username" placeholder="Username">
        </form>
        <div class="text">
-        <p>People who use our service may have uploaded <br> your contact information to Instagram. <a href="">Learn more</a>  </p>
+        <p>People who use our service may have uploaded <br> your contact information to Instagram. <a href="https://www.facebook.com/help/instagram/261704639352628">Learn more</a>  </p>
         
-        <p id="p2">By signing up, you agree to our Terms, Privacy  <br> Policy and Cookies Policy.</p>
+        <p id="p2">By signing up, you agree to our <a href="https://help.instagram.com/581066165581870/?locale=en_GB">Terms</a>, <a href="https://www.facebook.com/privacy/policy"> Privacy  <br> Policy </a> and <a href="https://privacycenter.instagram.com/policies/cookies/"> Cookies Policy. </a></p>
        </div>
        <div class="btnsignup">
 
            <button class="button">Sign Up</button>
         </div>
+
+        <div class="box2">
+            <span id="span1">Have an account?</span>
+            <span id="span2"> <a href="login.html">Log in</a></span>
+        </div>
+        <div class="box3">
+            <p>Get the app.</p>
+         </div>
+         <div class="box4">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D2087E489-A57D-4326-BB09-A67229BC6B2F%26utm_campaign%3DloginPage%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img class="googleplay" src="google play.png" alt=""></a>
+            <a  href="https://apps.microsoft.com/detail/9NBLGGH5L9XT?hl=en&gl=IN&ocid=pdpshare"><img class="microsoft" src="microsoft.png" alt=""></a>
+         </div>
+
     </div>
 </body>
 </html>
