new changes added

--- a/signup.html
+++ b/signup.html
@@ -23,19 +23,19 @@
             <span>————————</span> <p>OR</p> <span>————————</span>
        </div>
        <form class="form" action="">
-        <input type="text" name="" id="email" placeholder="Mobile number or email address">
+        <input type="text" name="" id="email" placeholder="Mobile Number or Email">
         <input type="password" name="" id="password" placeholder="Password">
         <input type="text" name="" id="fullname" placeholder=" Full Name">
         <input type="text" name="" id="Username" placeholder="Username">
        </form>
        <div class="text">
-        <p>People who use our service may have uploaded <br> your contact information to Instagram. <a href="https://www.facebook.com/help/instagram/261704639352628">Learn more</a>  </p>
+        <p>People who use our service may have uploaded <br> your contact information to Instagram. <a href="https://www.facebook.com/help/instagram/261704639352628">Learn <br> More</a>  </p>
         
-        <p id="p2">By signing up, you agree to our <a href="https://help.instagram.com/581066165581870/?locale=en_GB">Terms</a>, <a href="https://www.facebook.com/privacy/policy"> Privacy  <br> Policy </a> and <a href="https://privacycenter.instagram.com/policies/cookies/"> Cookies Policy. </a></p>
+        <p id="p2">By signing up, you agree to our <a href="https://help.instagram.com/581066165581870/?locale=en_GB">Terms</a> , <a href="https://www.facebook.com/privacy/policy"> Privacy  <br> Policy </a> and <a href="https://privacycenter.instagram.com/policies/cookies/"> Cookies Policy . </a></p>
        </div>
        <div class="btnsignup">
 
-           <button class="button">Sign Up</button>
+           <button class="button">Sign up</button>
         </div>
 
         <div class="box2">
