--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
 
         <div class="box2">
             <span id="span1">Have an account?</span>
-            <span id="span2"> <a href="login.html">Log in</a></span>
+            <span id="span2"> <a href="index.html">Log in</a></span>
         </div>
         <div class="box3">
             <p>Get the app.</p>
