--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
          <div class="img">
-        <img class="namelogo" src="Screenshot 2025-03-11 093801.png" alt=""> 
+        <img class="namelogo" src="Screenshot 2025-03-20 125114.png" alt=""> 
     </div>
         <form action="#" class="form">
             <input type="text" placeholder="Phone number, username, or email">
@@ -18,7 +18,7 @@
             <button class="button">Log in</button>
         </form>
         <div class="or">
-             <span>————————</span> <p>OR</p> <span>————————</span>
+             <span id="or">————————</span> <p>OR</p> <span id="or2">————————</span>
         </div>
 
         <div class="facebook">
@@ -29,7 +29,7 @@
         </div>  
 
         <div class="box2">
-            <!-- hello -->
+            
              <div class="box2-contain">
 
                  <p class="signup">Don't have an account? <a  href="signup.html"> Sign up</a></p>
@@ -43,6 +43,35 @@
             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D2087E489-A57D-4326-BB09-A67229BC6B2F%26utm_campaign%3DloginPage%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img class="googleplay" src="google play.png" alt=""></a>
             <a href="https://apps.microsoft.com/detail/9NBLGGH5L9XT?hl=en&gl=IN&ocid=pdpshare"><img class="microsoft" src="microsoft.png" alt=""></a>
          </div>
+
+         <footer>
+            <div class="footer-container">
+                <ul class="footer-links">
+                    <span><a href="#">Meta</a></span>
+        <span><a href="#">About</a></span>
+        <span><a href="#">Blog</a></span>
+        <span><a href="#">Jobs</a></span>
+        <span><a href="#">Help</a></span>
+        <span><a href="#">API</a></span>
+        <span><a href="#">Privacy</a></span>
+        <span><a href="#">Terms</a></span>
+        <span><a href="#">Locations</a></span>
+        <span><a href="#">Instagram Lite</a></span>
+        <span><a href="#">Threads</a></span>
+        <span><a href="#">Contact Uploading & Non-Users</a></span>
+        <span><a href="#">Meta Verified</a></span>
+                </ul>
+                <div class="footer-bottom">
+                    <span id="footer-p">
+                        <select name="" id="">
+                        <option value="English">English</option>
+                    </select> 
+                    </span> &nbsp;&nbsp;&nbsp;
+                     <span>  &copy; 2025 Instagram from Meta</span>
+                </div>
+            </div>
+        </footer>
     </div>
+        
 </body>
 </html>
