--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="img">
-            <img class="namelogo" src="Screenshot 2025-03-11 093801.png" alt=""> 
+            <img class="namelogo" src="Screenshot 2025-03-20 125114.png" alt=""> 
         </div>
         <div>
             <p class="p1" >Sign up to see photos and videos </p><p class="p2"> from your friends.</p>
@@ -50,6 +50,34 @@
             <a  href="https://apps.microsoft.com/detail/9NBLGGH5L9XT?hl=en&gl=IN&ocid=pdpshare"><img class="microsoft" src="microsoft.png" alt=""></a>
          </div>
 
-    </div>
+   
+    <footer>
+        <div class="footer-container">
+            <ul class="footer-links">
+                <span><a href="#">Meta</a></span>
+    <span><a href="#">About</a></span>
+    <span><a href="#">Blog</a></span>
+    <span><a href="#">Jobs</a></span>
+    <span><a href="#">Help</a></span>
+    <span><a href="#">API</a></span>
+    <span><a href="#">Privacy</a></span>
+    <span><a href="#">Terms</a></span>
+    <span><a href="#">Locations</a></span>
+    <span><a href="#">Instagram Lite</a></span>
+    <span><a href="#">Threads</a></span>
+    <span><a href="#">Contact Uploading & Non-Users</a></span>
+    <span><a href="#">Meta Verified</a></span>
+            </ul>
+            <div class="footer-bottom">
+                <span id="footer-p">
+                    <select name="" id="">
+                    <option value="English">English</option>
+                </select> 
+                </span> &nbsp;&nbsp;&nbsp;
+                 <span>  &copy; 2025 Instagram from Meta</span>
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
