select down arrow modify

--- a/signup.html
+++ b/signup.html
@@ -72,9 +72,9 @@
                 <span id="footer-p">
                     <select name="" id="">
                     <option value="English">English</option>
-                </select> 
+                </select>  <img src="arrow.png" alt="">
                 </span> &nbsp;&nbsp;&nbsp;
-                 <span>  &copy; 2025 Instagram from Meta</span>
+                 <span id="footer-span2">  &copy; 2025 Instagram from Meta</span>
             </div>
         </div>
     </footer>
