--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up • Instagram</title>
-    <link rel="shortcut icon" href="logo insta.png" type="image/x-icon">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="shortcut icon" href="../img/logo insta.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/signup.css">
 </head>
 <body>
     <div class="main">
         <div class="img">
-            <img class="namelogo" src="Screenshot 2025-03-20 125114.png" alt=""> 
+            <img class="namelogo" src="../img/Screenshot 2025-03-20 125114.png" alt=""> 
         </div>
         <div>
             <p class="p1" >Sign up to see photos and videos </p><p class="p2"> from your friends.</p>
         </div>
 
         <div class="fbbtn">
-           <a href="https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Foidc%2F%3Fapp_id%3D124024574287414%26redirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignupviafb%252F%26response_type%3Dcode%26scope%3Dopenid%2Bemail%2Bprofile%2Blinking%26state%3DATkW4YjJHDeXCMhd2dNORUg9jGOhfNslGAevbLsCahfIOYW74uPja4XxsUvyhZWWiLXtgbZmgIEhtwUQz5-wYBTSXLaVOO3hC_7ijRyR2O7QB96vwhspq4nfp-Xo1ymDqUFtgvBCY9CpG19K3EcOtHH8cxuD_dQTQ191F5mBVMI-5c3YHiDjb8jVnwO3QSGEudxyO2lngX6og9KyQmJvxP6FxcKc1Unf1mxqxkX8ncmwrt19Gw"> <button type="submit" ><img src="fblogosignup.png" alt=""> <span>Log in with Facebook</span></button></a>
+           <a href="https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Foidc%2F%3Fapp_id%3D124024574287414%26redirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignupviafb%252F%26response_type%3Dcode%26scope%3Dopenid%2Bemail%2Bprofile%2Blinking%26state%3DATkW4YjJHDeXCMhd2dNORUg9jGOhfNslGAevbLsCahfIOYW74uPja4XxsUvyhZWWiLXtgbZmgIEhtwUQz5-wYBTSXLaVOO3hC_7ijRyR2O7QB96vwhspq4nfp-Xo1ymDqUFtgvBCY9CpG19K3EcOtHH8cxuD_dQTQ191F5mBVMI-5c3YHiDjb8jVnwO3QSGEudxyO2lngX6og9KyQmJvxP6FxcKc1Unf1mxqxkX8ncmwrt19Gw"> <button type="submit" ><img src="../img/fblogosignup.png" alt=""> <span>Log in with Facebook</span></button></a>
         </div>
         <div class="or">
             <span>————————</span> <p>OR</p> <span>————————</span>
@@ -40,14 +40,14 @@
 
         <div class="box2">
             <span id="span1">Have an account?</span>
-            <span id="span2"> <a href="index.html">Log in</a></span>
+            <span id="span2"> <a href="../index.html">Log in</a></span>
         </div>
         <div class="box3">
             <p>Get the app.</p>
          </div>
          <div class="box4">
-            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D2087E489-A57D-4326-BB09-A67229BC6B2F%26utm_campaign%3DloginPage%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img class="googleplay" src="google play.png" alt=""></a>
-            <a  href="https://apps.microsoft.com/detail/9NBLGGH5L9XT?hl=en&gl=IN&ocid=pdpshare"><img class="microsoft" src="microsoft.png" alt=""></a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D2087E489-A57D-4326-BB09-A67229BC6B2F%26utm_campaign%3DloginPage%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img class="googleplay" src="../img/google play.png" alt=""></a>
+            <a  href="https://apps.microsoft.com/detail/9NBLGGH5L9XT?hl=en&gl=IN&ocid=pdpshare"><img class="microsoft" src="../img/microsoft.png" alt=""></a>
          </div>
 
    
@@ -72,7 +72,7 @@
                 <span id="footer-p">
                     <select name="" id="">
                     <option value="English">English</option>
-                </select>  <img src="arrow.png" alt="">
+                </select>  <img src="../img/arrow.png" alt="">
                 </span> &nbsp;&nbsp;&nbsp;
                  <span id="footer-span2">  &copy; 2025 Instagram from Meta</span>
             </div>
